controller/pkg/agentgateway/translator/testdata/gateways/listenerset.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example
  namespace: default
spec:
  gatewayClassName: agentgateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
  allowedListeners:
    namespaces:
      from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  name: foo
  namespace: default
spec:
  parentRef:
    name: example
    kind: Gateway
    group: gateway.networking.k8s.io
  listeners:
    - name: http-9090
      protocol: HTTP
      port: 9090
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foo
  namespace: default
spec:
  parentRefs:
    - name: foo
      group: gateway.networking.k8s.io
      kind: ListenerSet
  hostnames:
    - "foo.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: foo-svc
          port: 8080
---
# Output
output:
- gateway:
    Name: example
    Namespace: default
  resource:
    bind:
      key: 80/default/example
      port: 80
- gateway:
    Name: example
    Namespace: default
  resource:
    bind:
      key: 9090/default/example
      port: 9090
- gateway:
    Name: example
    Namespace: default
  resource:
    listener:
      bindKey: 80/default/example
      key: default/example.http
      name:
        gatewayName: example
        gatewayNamespace: default
        listenerName: http
      protocol: HTTP
- gateway:
    Name: example
    Namespace: default
  resource:
    listener:
      bindKey: 9090/default/example
      key: default/foo.http-9090
      name:
        gatewayName: example
        gatewayNamespace: default
        listenerName: http-9090
        listenerSet:
          name: foo
          namespace: default
      protocol: HTTP
- gateway:
    Name: example
    Namespace: default
  resource:
    route:
      backends:
      - backend:
          port: 8080
          service:
            hostname: foo-svc.default.svc.cluster.local
            namespace: default
        weight: 1
      hostnames:
      - foo.example.com
      key: default/foo.00.default.foo.http-9090
      listenerKey: default/foo.http-9090
      matches:
      - path:
          pathPrefix: /
      name:
        kind: HTTPRoute
        name: foo
        namespace: default
status:
- apiVersion: gateway.networking.k8s.io/v1
  kind: ListenerSet
  metadata:
    name: foo
    namespace: default
  spec: null
  status:
    conditions:
    - lastTransitionTime: fake
      message: Resource accepted
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: fake
      message: Resource programmed
      reason: Programmed
      status: "True"
      type: Programmed
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: fake
        message: No errors found
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: fake
        message: No errors found
        reason: NoConflicts
        status: "False"
        type: Conflicted
      - lastTransitionTime: fake
        message: No errors found
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: fake
        message: No errors found
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http-9090
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: example
    namespace: default
  spec: null
  status:
    attachedListenerSets: 1
    conditions:
    - lastTransitionTime: fake
      message: ""
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: fake
      message: Successfully programmed Gateway
      reason: Programmed
      status: "True"
      type: Programmed
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: fake
        message: No errors found
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: fake
        message: No errors found
        reason: NoConflicts
        status: "False"
        type: Conflicted
      - lastTransitionTime: fake
        message: No errors found
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: fake
        message: No errors found
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
