controller/pkg/agentgateway/translator/testdata/gateways/tls-backend-client-cert.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test-gateway
  namespace: default
spec:
  gatewayClassName: agentgateway
  tls:
    backend:
      clientCertificateRef:
        group: ""
        kind: Secret
        name: backend-client
        namespace: default
  listeners:
    - name: http
      port: 80
      protocol: HTTP
---
# Output
output:
- gateway:
    Name: test-gateway
    Namespace: default
  resource:
    bind:
      key: 80/default/test-gateway
      port: 80
- gateway:
    Name: test-gateway
    Namespace: default
  resource:
    listener:
      bindKey: 80/default/test-gateway
      key: default/test-gateway.http
      name:
        gatewayName: test-gateway
        gatewayNamespace: default
        listenerName: http
      protocol: HTTP
status:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: test-gateway
    namespace: default
  spec: null
  status:
    attachedListenerSets: 0
    conditions:
    - lastTransitionTime: fake
      message: ""
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: fake
      message: invalid certificate reference /Secret/backend-client.default, secret
        not found
      reason: InvalidClientCertificateRef
      status: "False"
      type: ResolvedRefs
    - lastTransitionTime: fake
      message: Successfully programmed Gateway
      reason: Programmed
      status: "True"
      type: Programmed
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: fake
        message: No errors found
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: fake
        message: No errors found
        reason: NoConflicts
        status: "False"
        type: Conflicted
      - lastTransitionTime: fake
        message: No errors found
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: fake
        message: invalid certificate reference /Secret/backend-client.default, secret
          not found
        reason: InvalidClientCertificateRef
        status: "False"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
