controller/pkg/agentgateway/translator/testdata/gateways/tls-listeners-mitm-dynamic-frontend-mtls.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test-gateway
  namespace: default
spec:
  gatewayClassName: agentgateway
  tls:
    frontend:
      default:
        validation:
          caCertificateRefs:
            - name: ca-cert
              kind: ConfigMap
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        options:
          agentgateway.dev/tls-certificate-source: MITM_DYNAMIC
        certificateRefs:
          - name: tls
            kind: Secret
---
kind: Secret
apiVersion: v1
metadata:
  name: tls
  namespace: default
type: kubernetes.io/tls
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJiakNDQVJPZ0F3SUJBZ0lVTFpDLzFkMEhpMlRFUGk5MUtwamVZbzgzZ1pBd0NnWUlLb1pJemowRUF3SXcKRERFS01BZ0dBMVVFQXd3QllUQWVGdzB5TlRFeE1qVXlNRFE0TURKYUZ3MHlOVEV4TWpZeU1EUTRNREphTUF3eApDakFJQmdOVkJBTU1BV0V3V1RBVEJnY3Foa2pPUFFJQkJnZ3Foa2pPUFFNQkJ3TkNBQVIvc1UybWRnbkhab2Z6CmR0b0tRZm5FMWdrVE9HY2JJaWFUeDdXUGpZcXF1c1p5ZWYybTBpbkgrcnJVRFBJY2tTRlQ5dnlzRVJFVTBKcGMKL3JTZmVVOG9vMU13VVRBZEJnTlZIUTRFRmdRVWdNQ01qYnRKZnQ2VjAyT1JWMzZQcmpBWWNPd3dId1lEVlIwagpCQmd3Rm9BVWdNQ01qY [...]
  tls.key: LS0tLS1CRUdJTiBFQyBQUklWQVRFIEtFWS0tLS0tCk1IY0NBUUVFSUxRblhESm5qZFRianhhV2NKQkJOK0FDVjh3UDRxR3RZdVA0VjdZSXdJdGRvQW9HQ0NxR1NNNDkKQXdFSG9VUURRZ0FFZjdGTnBuWUp4MmFIODNiYUNrSDV4TllKRXpobkd5SW1rOGUxajQyS3Fyckdjbm45cHRJcAp4L3E2MUF6eUhKRWhVL2I4ckJFUkZOQ2FYUDYwbjNsUEtBPT0KLS0tLS1FTkQgRUMgUFJJVkFURSBLRVktLS0tLQo=
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: ca-cert
  namespace: default
data:
  ca.crt: |-
    -----BEGIN CERTIFICATE-----
    MIIC1jCCAb4CCQCJczLyBBZ1GTANBgkqhkiG9w0BAQsFADAtMRUwEwYDVQQKDAxl
[...]
    SxODgqhtaPnOxQ==
    -----END CERTIFICATE-----

---
# Output
output:
- gateway:
    Name: test-gateway
    Namespace: default
  resource:
    bind:
      key: 443/default/test-gateway
      port: 443
      protocol: TLS
- gateway:
    Name: test-gateway
    Namespace: default
  resource:
    listener:
      bindKey: 443/default/test-gateway
      key: default/test-gateway.https
      name:
        gatewayName: test-gateway
        gatewayNamespace: default
        listenerName: https
      protocol: HTTPS
      tls:
        cert: aW52YWxpZA==
        privateKey: aW52YWxpZA==
status:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: test-gateway
    namespace: default
  spec: null
  status:
    attachedListenerSets: 0
    conditions:
    - lastTransitionTime: fake
      message: 'Some listeners are not programmed: https: Bad TLS configuration'
      reason: ListenersNotValid
      status: "True"
      type: Accepted
    - lastTransitionTime: fake
      message: Successfully programmed Gateway
      reason: Programmed
      status: "True"
      type: Programmed
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: fake
        message: GatewayTLSConfig validation caCertificateRefs cannot be configured
          with MITM_DYNAMIC TLS certificate source
        reason: NoValidCACertificate
        status: "False"
        type: Accepted
      - lastTransitionTime: fake
        message: No errors found
        reason: NoConflicts
        status: "False"
        type: Conflicted
      - lastTransitionTime: fake
        message: Bad TLS configuration
        reason: Invalid
        status: "False"
        type: Programmed
      - lastTransitionTime: fake
        message: GatewayTLSConfig validation caCertificateRefs cannot be configured
          with MITM_DYNAMIC TLS certificate source
        reason: InvalidCACertificateRef
        status: "False"
        type: ResolvedRefs
      name: https
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
