controller/pkg/agentgateway/translator/testdata/gateways/tls-passthrough-listeners.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test-gateway
  namespace: default
spec:
  gatewayClassName: agentgateway
  listeners:
    - name: tls
      port: 443
      protocol: TLS
      tls:
        mode: Passthrough
---
# Output
output:
- gateway:
    Name: test-gateway
    Namespace: default
  resource:
    bind:
      key: 443/default/test-gateway
      port: 443
      protocol: TLS
- gateway:
    Name: test-gateway
    Namespace: default
  resource:
    listener:
      bindKey: 443/default/test-gateway
      key: default/test-gateway.tls
      name:
        gatewayName: test-gateway
        gatewayNamespace: default
        listenerName: tls
      protocol: TLS
status:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: test-gateway
    namespace: default
  spec: null
  status:
    attachedListenerSets: 0
    conditions:
    - lastTransitionTime: fake
      message: ""
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: fake
      message: Successfully programmed Gateway
      reason: Programmed
      status: "True"
      type: Programmed
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: fake
        message: No errors found
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: fake
        message: No errors found
        reason: NoConflicts
        status: "False"
        type: Conflicted
      - lastTransitionTime: fake
        message: No errors found
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: fake
        message: No errors found
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: tls
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: TLSRoute
