controller/pkg/agentgateway/translator/testdata/gateways/tls-spiffe-istio-conflict.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test-gateway
  namespace: default
spec:
  gatewayClassName: agentgateway
  listeners:
    - name: spiffe
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        options:
          gateway.istio.io/tls-terminate-mode: ISTIO_MUTUAL
          agentgateway.dev/tls-certificate-source: SPIFFE

---
# Output
output:
- gateway:
    Name: test-gateway
    Namespace: default
  resource:
    bind:
      key: 443/default/test-gateway
      port: 443
      protocol: TLS
- gateway:
    Name: test-gateway
    Namespace: default
  resource:
    listener:
      bindKey: 443/default/test-gateway
      key: default/test-gateway.spiffe
      name:
        gatewayName: test-gateway
        gatewayNamespace: default
        listenerName: spiffe
      protocol: HTTPS
      tls:
        cert: aW52YWxpZA==
        privateKey: aW52YWxpZA==
status:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: test-gateway
    namespace: default
  spec: null
  status:
    attachedListenerSets: 0
    conditions:
    - lastTransitionTime: fake
      message: 'Some listeners are not accepted: spiffe: Bad TLS configuration'
      reason: ListenersNotValid
      status: "True"
      type: Accepted
    - lastTransitionTime: fake
      message: Successfully programmed Gateway
      reason: Programmed
      status: "True"
      type: Programmed
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: fake
        message: No errors found
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: fake
        message: No errors found
        reason: NoConflicts
        status: "False"
        type: Conflicted
      - lastTransitionTime: fake
        message: Bad TLS configuration
        reason: Invalid
        status: "False"
        type: Programmed
      - lastTransitionTime: fake
        message: TLS certificate source SPIFFE cannot be combined with the ISTIO_MUTUAL
          termination mode
        reason: InvalidCertificateRef
        status: "False"
        type: ResolvedRefs
      name: spiffe
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
